Resize slider bar and fix toggle alignment

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -13,6 +13,7 @@
 
 #slider {
   width: 90%;
+  height: 4px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -24,10 +25,11 @@
 }
 
 .ui-slider-handle {
-  width: 60px!important;
+  width: 40px!important;
   height: 24px!important;
   top: 50%!important;
-  transform: translateY(-50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 @media (max-width: 1024px) {
